[package]
name = "theia"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "theia"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
theia_uuid_keeper = {path = "../theia_uuid_keeper", features =["cpi"]}
c3caller_solana = {path = "../c3caller_solana", features =["cpi"]}
theia_router_config = {path ="../theia_router_config",features=["cpi"]}

